fix: completely refactored Url.java and its subclasses